[gd_scene load_steps=8 format=3 uid="uid://c4f0lu4niir0k"]

[ext_resource type="Texture2D" uid="uid://dr0wqgmtwxyyo" path="res://ArtAssets/UI/UINotebook.png" id="1_uxyon"]
[ext_resource type="Script" uid="uid://cka7hqiikhuvn" path="res://UI/pause_ui_handler.gd" id="1_ww6sy"]
[ext_resource type="Theme" uid="uid://b7i8iy7krauku" path="res://UI/text_edit_theme.tres" id="2_garsl"]
[ext_resource type="Theme" uid="uid://bgr6frj5j5a2w" path="res://UI/label_theme.tres" id="2_h0mjx"]
[ext_resource type="FontFile" uid="uid://bq7xtjypk2864" path="res://UI/PixelFont.ttf" id="3_j7cjj"]
[ext_resource type="Theme" uid="uid://dhfh8ip3erkc0" path="res://UI/scroll_theme.tres" id="4_rtuia"]
[ext_resource type="Theme" uid="uid://b6m6fsg3natah" path="res://UI/pause_button_theme.tres" id="6_et8rb"]

[node name="pause_ui_handler" type="CanvasLayer"]
script = ExtResource("1_ww6sy")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -84.0
offset_right = -96.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 0
texture = ExtResource("1_uxyon")

[node name="inventory_title" type="Label" parent="background"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 10.0
theme = ExtResource("2_h0mjx")
theme_override_font_sizes/font_size = 6
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="inventory_container" type="ScrollContainer" parent="background"]
layout_mode = 0
offset_left = 4.0
offset_top = 11.0
offset_right = 39.0
offset_bottom = 44.0
theme = ExtResource("4_rtuia")

[node name="GridContainer" type="GridContainer" parent="background/inventory_container"]
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 2
columns = 2

[node name="hand_title" type="Label" parent="background"]
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 10.0
theme = ExtResource("2_h0mjx")
theme_override_font_sizes/font_size = 6
text = "Active Hand"
horizontal_alignment = 1
vertical_alignment = 1

[node name="right_container" type="VBoxContainer" parent="background"]
layout_mode = 0
offset_left = 54.0
offset_top = 2.0
offset_right = 94.0
offset_bottom = 44.0
theme_override_constants/separation = 1

[node name="notes_title" type="Label" parent="background/right_container"]
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = ExtResource("2_h0mjx")
theme_override_font_sizes/font_size = 6
text = "Notes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="notes_edit" type="TextEdit" parent="background/right_container"]
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = ExtResource("2_garsl")
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("3_j7cjj")
theme_override_font_sizes/font_size = 4
placeholder_text = "Notes..."

[node name="options_title" type="Label" parent="background/right_container"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(40, 8)
layout_mode = 2
theme = ExtResource("2_h0mjx")
theme_override_font_sizes/font_size = 6
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="background/right_container"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="resume_button" type="Button" parent="background/right_container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_et8rb")
theme_override_colors/font_hover_pressed_color = Color(0.261113, 0.261113, 0.261113, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_font_sizes/font_size = 3
text = "Resume"

[node name="save_button" type="Button" parent="background/right_container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_et8rb")
theme_override_font_sizes/font_size = 3
text = "Save"

[node name="quit_button" type="Button" parent="background/right_container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_et8rb")
theme_override_font_sizes/font_size = 3
text = "Quit to Menu"

[node name="exit_button" type="Button" parent="background/right_container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_et8rb")
theme_override_font_sizes/font_size = 3
text = "Exit Game"

[node name="exit_timer" type="Timer" parent="background/right_container/VBoxContainer/exit_button"]
wait_time = 3.0
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="background/right_container/notes_edit" to="." method="_on_notes_edit_text_changed"]
[connection signal="pressed" from="background/right_container/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="background/right_container/VBoxContainer/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="background/right_container/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="background/right_container/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="background/right_container/VBoxContainer/exit_button/exit_timer" to="." method="_on_exit_timer_timeout"]
